PY: built-in mod

--- a/Py/08modules/built_in/datetime/datetime.ipynb
+++ b/Py/08modules/built_in/datetime/datetime.ipynb
@@ -1,81 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DateTime\n",
+    "\n",
+    "[https://realpython.com/python-datetime/](https://realpython.com/python-datetime/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__doc__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'perm', 'pi', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import math\n",
-    "print(dir(math))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.141592653589793"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "math.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "math.factorial(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "math.ceil(9.4)"
+    "import datetime"
    ]
   },
   {
@@ -86,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "9.0"
+       "datetime.datetime(2021, 10, 16, 23, 58, 39, 133743)"
       ]
      },
      "execution_count": 2,
@@ -95,7 +35,100 @@
     }
    ],
    "source": [
-    "math.pow(3,2)"
+    "datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-10-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_object = datetime.date.today()\n",
+    "print(date_object)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Python datetime Instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2020, 1, 31)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date, time, datetime\n",
+    "date(year=2020, month=1, day=31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.time(13, 14, 31)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time(hour=13, minute=14, second=31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2020, 1, 31, 13, 14, 31)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime(year=2020, month=1, day=31, hour=13, minute=14, second=31)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Strings to Create Python datetime Instances"
    ]
   },
   {
@@ -106,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "datetime.date(2020, 1, 31)"
       ]
      },
      "execution_count": 8,
@@ -115,16 +148,30 @@
     }
    ],
    "source": [
-    "from math import gcd\n",
-    "gcd(30,16)"
+    "from datetime import date\n",
+    "date.fromisoformat(\"2020-01-31\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countdown to DEADLINE: 56 days, 7:56:10.039381\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "DEADLINE = datetime(year=2021, month=12, day=12, hour=8)\n",
+    "countdown = DEADLINE - datetime.now()\n",
+    "print(f\"Countdown to DEADLINE: {countdown}\")\n"
+   ]
   }
  ],
  "metadata": {
